# Suricate

./: README.md  dune-project  suricate.opam
examples/: custom.ml  dune  main.ml
examples/custom/: dune
examples/main/: dune  main.ml
lib/: dune  file_handler.ml  file_handler.mli  filter.ml  filter.mli  formatter.ml  formatter.mli  handler.ml  handler.mli  log.ml  log.mli  log_level.ml  log_level.mli  logger.ml  logger.mli  stream_handler.ml  stream_handler.mli  suricate.ml  suricate.mli
